--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.jpa.hibernate.ddl-auto= update
 # App Properties
 bezkoder.app.jwtSecret= ======================Portal=Spring===========================
 bezkoder.app.jwtExpirationMs= 86400000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=baflemployeeportal@gmail.com
+spring.mail.password=vdgt mbqn rpeb igwg
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=15000
+spring.mail.properties.mail.smtp.timeout=15000
+spring.mail.properties.mail.smtp.writetimeout=15000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
